# telegram_dizi_film_izleme_rust_bot

./: Cargo.toml  Dockerfile  README.md  diziler.txt  filmler.txt  izlenen_filmler.txt
src/: main.rs
